task-86405-fixed calendar hint dots spacing in arabic view

--- a/scss/common/modules/_custom_calendar.scss
+++ b/scss/common/modules/_custom_calendar.scss
@@ -303,7 +303,7 @@ $dashboard-calendar: "dashboard-calendar";
                 height: 12px;
                 border-radius: 50%;
                 border: none;
-                margin: 0 theme('padding.2') 0 0;
+                margin-#{theme('direction.right','value')}: theme('margin.2');
             }
             .disabled-box {
                 background: theme('color.gray.200');
